# AI-projects

./: Dockerfile  Final Project.csproj  Final Project.http  Final Project.sln  Program.cs  appsettings.json  הסבר כללי פרויקט.txt
01-cli-agent/: .env  .env.example  PROMPTS_ANALYSIS.md  README.md  main.py  pyproject.toml  requirements.txt  run_demo.py  sheets_integration.py
01-cli-agent/results/20260525_230254_demo/: analysis.md
01-cli-agent/results/20260525_230747_demo/: Iteration_1_-_Basic.csv  Iteration_3_-_Safety_Aware.csv  analysis.md
01-cli-agent/results/20260525_231638_demo/: analysis.md
02-final-project/: README.md  docker-compose.yml
02-final-project/src/ApiGateway/: Dockerfile
02-final-project/src/BffService/: Program.cs
02-final-project/src/InventoryService/: Dockerfile  Program.cs
02-final-project/src/OrderService/: Program.cs  appsettings.json
02-final-project/src/ProductCatalogService/: ADR-Database.md  Dockerfile  Program.cs
Controllers/: InventoryController.cs  OrdersController.cs  ProductsController.cs
Data/: AppDbContext.cs
Migrations/: 20260623121536_InitialCreate.Designer.cs  20260623121536_InitialCreate.cs  AppDbContextModelSnapshot.cs
Models/: Inventory.cs  Order.cs  Product.cs
Properties/: launchSettings.json
src/ApiGateway/: appsettings.json
src/BffService/: Dockerfile
src/InventoryService/: ADR-Database.md  appsettings.json
src/NotificationService/: ADR-Database.md  Dockerfile  Program.cs  appsettings.json
src/OrderService/: ADR-Database.md  Dockerfile
src/ProductCatalogService/: appsettings.json
(+16 files in other folders)
