[project]
name = "cli-agent-project"
version = "0.2.0"
description = "CLI Agent - Converting Natural Language to Windows Commands using Prompt Engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "gradio>=6.14.0",
    "google-generativeai>=0.8.0",
    "gspread>=6.1.0",
    "oauth2client>=4.1.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
